first commit for login tests

--- a/templates/login.html
+++ b/templates/login.html
@@ -19,4 +19,5 @@
             <br>
             <button type="submit">Login</button>
         </form>
+        <h2>Test for update branch</h2>
     </div>
