added some functionality to the google login and working on indexing the db during app running

--- a/templates/login.html
+++ b/templates/login.html
@@ -20,4 +20,10 @@
             <button type="submit">Login</button>
         </form>
         <h2>Test for update branch</h2>
+        <a href="{{ google_login }}">
+            <button>Login with Google</button>
+        </a>
+        <a href="{{ apple_login }}">
+            <button>Login with Apple</button>
+        </a>
     </div>
