--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,9 @@
 body.body {
     font-family: Arial, sans-serif;
-    margin-left: 10%;
-    padding-left: 10%;
+    margin-left: 5%;
+    padding-left: 5%;
+    margin-right: 5%;
+    padding-right: 5%;
     margin-top: 4%;
     background-color: #021526;
     color: #E2E2B6;
