--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -41,21 +41,24 @@
                     <div class="tracker-content">
                         {% if tracker %}
                         <div class="tracker-list">
+                            {# create pagination of all tracker climbs where all tracked climbs are all_trackers #}
                             {% for climb in tracker %}
                             <div class="tracker-item">
-                                <h4>{{ climb.route_name }} - {{ climb.grade }}</h4>
-                                <p>Date: {{ climb.date }}</p>
-                                <p>Location: {{ climb.location }}</p>
-                                <p>Notes: {{ climb.notes }}</p>
+                                <h3>{{ climb.climb_name }}</h3>
+                                <p>Grade: {{ climb.grade }} ({{ climb.grading_system }})</p>
+                                <p>Date Added: {{ climb.date_added }}</p>
+                                <p>Attempts: {{ climb.attempts }}</p>
+                                {% if climb.description %}
+                                <p>Description: {{ climb.description }}</p>
+                                {% endif %}
                             </div>
                             {% endfor %}
-
                         </div>
                         {% else %}
                         <div class="no-tracker">
                             <p>No climbs tracked yet.</p>
                             <p>It looks like you haven't started tracking any climbs yet!</p>
-                            <a href="/api/" class="btn btn-primary">Create Your First Climb</a>
+                            <a href="/api/new_tracker" class="btn btn-primary">Create Your First Climb</a>
                         </div>
                         {% endif %}
                     </div>
