--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+{% block content %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -37,3 +40,4 @@
 
 </body>
 </html>
+{% endblock %}
