--- a/templates/index.html
+++ b/templates/index.html
@@ -27,12 +27,23 @@
             </div>
             <div>
                 <ul>
-                    <li>Add Photos and Videos</li>
                     <li>Graphs showing ability changes over time</li>
-                    <li>Social features with sharing abilities with friends</li>
+                    
+                </ul>
+            </div>
+            <h2>
+                RECENTLY ADDED FEATURES
+            </h2>
+            <div>
+                <ul>
+                    <li>Upload photos and videos to climbs</li>
+                    <li>Edit climb details after creation</li>
                 </ul>
             </div>
 
+            <div>
+                <a href="/user/my_tracker" class="btn btn-primary">Go to Dashboard</a>
+            </div>
         </div>
     </div>
 
