--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🧗 Climbing Tracker</title>
     <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="/static/css/new_tracker.css">
     <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
 </head>
 <body class="body">
