fixed routing errors for favicon

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,13 @@
         <link rel="stylesheet" href="/static/css/style.css">
         <link rel="stylesheet" href="/static/css/base.css">
         {% block extra_css %}{% endblock %}
+        
+        <!-- Favicon links for better browser compatibility -->
         <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
+        <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon.ico">
+        <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon.ico">
+        <link rel="apple-touch-icon" href="/static/favicon.ico">
+        <meta name="msapplication-TileImage" content="/static/favicon.ico">
     </head>
     <body class="navbar-styled">
         <nav class="navbar">
