presigned url and additional ux changes

--- a/templates/view_climb.html
+++ b/templates/view_climb.html
@@ -51,7 +51,8 @@
                                             
                                         {% elif media.mime.startswith('video/') %}
                                         <div class="media-thumb video-wrapper">
-                                            <video controls class="media-thumb">
+                                            <video controls class="media-thumb" preload="none"
+                                                {% if media.thumbnail %}poster="https://{{ media.thumbnail }}"{% endif %}>
                                                 <source src="{{ media.url }}" type="{{ media.mime }}">
                                             </video>
                                         </div>
