--- a/templates/climb_details.html
+++ b/templates/climb_details.html
@@ -16,7 +16,7 @@
                 <p>Update your climb details below.</p>
             </div>
             <div class="climb-edit-container">
-                <form action="/api/update_tracker/{{ climb._id }}" method="post" enctype="multipart/form-data">
+                <form action="/api/update_tracker/{{ climb._id }}" method="post">
                     
                     <div class="form-group">
                         <label for="grading_system">Grading System:</label>
@@ -105,7 +105,7 @@
                                             <button type="button" class="remove-existing-media-btn" data-media-id="{{ media._id }}">×</button>
                                         {% elif media.mime.startswith('video/') %}
                                         <div class="media-thumb video-wrapper">
-                                            <video controls class="media-thumb">
+                                            <video controls class="media-thumb" preload="none" {% if media.thumbnail %}poster="https://{{ media.thumbnail }}"{% endif %}>
                                                 <source src="{{ media.url }}" type="{{ media.mime }}">
                                             </video>
                                         </div>
