contact added to home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,6 +37,7 @@
             </h2>
             <div>
                 <ul>
+                    <li>Faster uploads for media files, any tips email myself: <a href="mailto:hari@hariviggy.com">hari@hariviggy.com</a></li>
                     <li>Upload photos and videos to climbs</li>
                     <li>Edit climb details after creation</li>
                 </ul>
